deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-cat-ops
  namespace: dhge
spec:
  ports:
  - port: 3000
  selector:
    app: dev-cat-ops

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-cat-ops
  namespace: dhge
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: cats.pein-gera.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-cat-ops
                port:
                  number: 3000
  tls:
    - hosts:
        - cats.pein-gera.de
      secretName: cats-pein-gera-de-tls

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-cat-ops
  namespace: dhge
spec:
  selector:
    matchLabels:
      app: dev-cat-ops
  template:
    metadata:
      labels:
        app: dev-cat-ops
    spec:
      containers:
      - image: gewuerznud3l/dev-cat-ops:main
        name: dev-cat-ops
        imagePullPolicy: Always
        volumeMounts:
        - name: uploads
          mountPath: /opt/devcatops/uploads
      - image: mariadb:lts
        name: mariadb
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: dev-cat-ops-db-data
      - name: uploads
        persistentVolumeClaim:
          claimName: dev-cat-ops-uploads
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: node.kubernetes.io/instance-type # all nodes should have 'k3s'
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchExpressions:
          - key: app
            operator: Exists
